maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:25: error: forward reference extends over definition of variable valMaxMarque
  marquerSol(sortie, 0);
  ^